cmake_minimum_required(VERSION 3.16)
project(Cpp_Systems_Playground LANGUAGES CXX)

# Global defaults
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(MSVC)
  add_compile_options(/W4 /permissive-)
else()
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Toggle demos
option(BUILD_AOS_SOA        "Build AoS_vs_SoA_Traversal" ON)
option(BUILD_FALSE_SHARING  "Build False_Sharing_Demo" ON)
option(BUILD_SIZES          "Build LP64_vs_LLP64" ON)
option(BUILD_SPSC           "Build Lock_Free_Ring_Buffer" ON)
option(BUILD_POOL_PROBE     "Build Pool_Allocator_w_Placement_New" ON)
option(BUILD_VECTOR_MOVES   "Build Vector_Reallocation_&_noexcept_Move" ON)

if(BUILD_AOS_SOA)
  add_subdirectory(AoS_vs_SoA_Traversal)
endif()
if(BUILD_FALSE_SHARING)
  add_subdirectory(False_Sharing_Demo)
endif()
if(BUILD_SIZES)
  add_subdirectory(LP64_vs_LLP64)
endif()
if(BUILD_SPSC)
  add_subdirectory(Lock_Free_Ring_Buffer)
endif()
if(BUILD_POOL_PROBE)
  add_subdirectory(Pool_Allocator_w_Placement_New)
endif()
if(BUILD_VECTOR_MOVES)
  add_subdirectory(Vector_Reallocation_&_noexcept_Move)
endif()
